# taflex-python-modular

./: .gitignore  404.html  README.md  codechecks.sh  docs.sh  index.html  init.sh  mcp.json  mkdocs.yml  pyproject.toml  scaffold.sh  setup.sh  sitemap.xml
.github/workflows/: ai-agent.yml  ci.yml  docs.yml
api/core-interfaces/: index.html
architecture/execution-flow/: index.html
architecture/overview/: index.html
best-practices/test-design/: index.html
changelog/: index.html
contributing/guidelines/: index.html
docs/: changelog.md  index.md
docs/api/: core-interfaces.md
docs/architecture/: execution-flow.md  overview.md
docs/best-practices/: test-design.md
docs/contributing/: guidelines.md
docs/getting-started/: configuration.md  quickstart.md  scaffolding-wizard.md
docs/guides/: ai-agent-workflows.md  api-testing.md  bdd-testing.md  cloud-testing.md  database.md  developers.md  locators.md  managers.md  mcp-integration.md  pact-testing.md  qa-engineers.md  reporting.md  unit-testing.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/troubleshooting/: common-issues.md
docs/tutorials/: api-tests.md  bdd-tests.md  cloud-execution.md  contract-testing.md  mcp-tutorial.md  mobile-tests.md  web-tests.md
getting-started/configuration/: index.html
getting-started/quickstart/: index.html
getting-started/scaffolding-wizard/: index.html
guides/ai-agent-workflows/: index.html
guides/api-testing/: index.html
guides/bdd-testing/: index.html
guides/cloud-testing/: index.html
guides/database/: index.html
guides/developers/: index.html
guides/locators/: index.html
guides/managers/: index.html
guides/mcp-integration/: index.html
guides/pact-testing/: index.html
guides/qa-engineers/: index.html
guides/reporting/: index.html
guides/unit-testing/: index.html
overrides/: main.html
scripts/: ci_agent.py
search/: search_index.json
src/taflex/: mcp_server.py
(+34 files in other folders)
