[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taflex-py"
version = "0.1.0"
dependencies = [
    "pytest",
    "pydantic",
    "pydantic-settings",
    "allure-pytest",
    "pytest-reportportal",
    "pytest-jira-xray",
    "SQLAlchemy",
    "ruff",
    "mypy",
    "pytest-xdist",
    "radon",
    "pytest-cov"
]

[project.optional-dependencies]
api = ["httpx", "playwright"]
web = ["playwright"]
mobile = ["Appium-Python-Client"]
bdd = ["pytest-bdd"]
contract = ["pact-python"]
mcp = ["mcp>=1.0.0"]
all = ["taflex-py[api,web,mobile,bdd,contract,mcp]"]

[project.scripts]
taflex-mcp = "taflex.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "api: mark test as api test",
    "web: mark test as web test",
    "mobile: mark test as mobile test",
    "bdd: mark test as bdd test",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
